--- a/productManagement.html
+++ b/productManagement.html
@@ -1,43 +1,34 @@
-<!--
-IST 256 - Web Application Group Project
-Group: 7
-Members:
-    - Eyan Jaffery
-    - Michael Litka
-    - Jeffery Gaskin
--->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="shippingApp">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <title>The Bookshelf</title>
-    <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
-<body>
-<!-- Navigation-->
+<body ng-controller="ProductController as productCtrl">
+
+<!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="index.html">The Bookshelf</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#booksListing">Browse Books</a></li>
-                <li class="nav-item"><a class="nav-link" id="joinLink" href="shopperManagement.html">Join The Bookshelf</a></li>
+                <li class="nav-item"><a class="nav-link" href="shopperManagement.html">Join The Bookshelf</a></li>
                 <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
             </ul>
         </div>
     </div>
 </nav>
-<!-- Header-->
+
+<!-- Header -->
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
@@ -46,6 +37,7 @@ Members:
         </div>
     </div>
 </header>
+
 <!-- Cart Section -->
 <section class="h-100 h-custom">
     <div class="container py-5 h-100">
@@ -56,40 +48,67 @@ Members:
                         <div class="row g-0">
                             <div class="col-lg-8">
                                 <div class="p-5">
-                                    <div class="d-flex justify-content-between align-items-center mb-5">
-                                        <h1 class="fw-bold mb-0">Shopping Cart</h1>
-                                        <h6 class="mb-0 text-muted"></h6>
+                                    <!-- Product Search Section -->
+                                    <div class="p-5">
+                                        <h1 class="fw-bold mb-5">Product Search</h1>
+                                        <input type="text" id="productSearch" class="form-control mb-2" placeholder="Search for products...">
+                                        <div id="searchDropdown" class="dropdown-menu custom-dropdown" style="display: none; position: absolute; z-index: 1000;">
+                                            <!-- Search suggestions will appear here -->
+                                        </div>
                                     </div>
                                     <section id="showProducts">
-                                    <!-- Products displayed here with JS -->
-                                        <div id="loadingSpinner" class="spinner-border text-primary" role="status" style="display: none;">
+                                        <!-- Loading Spinner -->
+                                        <div ng-if="productCtrl.loading" class="spinner-border text-primary" role="status">
                                             <span class="visually-hidden">Loading...</span>
+                                        </div>
+
+                                        <!-- Cart List -->
+                                        <div ng-repeat="item in productCtrl.cart" class="row mb-4 d-flex justify-content-between align-items-center product-row">
+                                            <div class="col-md-2">
+                                                <img src="{{ item.image }}" class="img-fluid rounded-3" alt="{{ item.description }}" style="width: 80px; height: 120px;">
+                                            </div>
+                                            <div class="col-md-4">
+                                                <h5>{{ item.name }}</h5>
+                                                <p>{{ item.author }}</p>
+                                            </div>
+                                            <div class="col-md-3 d-flex">
+                                                <select class="form-select" ng-model="item.quantity" ng-change="productCtrl.updateItemTotal(item)">
+                                                    <option ng-repeat="qty in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" value="{{ qty }}">{{ qty }}</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-md-2 text-end">
+                                                <h6 class="mb-0">${{ item.totalPrice | number:2 }}</h6>
+                                            </div>
+                                            <div class="col-md-1 text-end">
+                                                <button type="button" class="btn btn-danger" ng-click="productCtrl.removeItem(item)">&times;</button>
+                                            </div>
                                         </div>
                                     </section>
 
-                                    <div class="pt-5">
-                                        <h6 class="mb-0"><a href="index.html" class="text-body"><i
-                                                class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
-                                    </div>
+                                    <a href="index.html" class="text-body mt-4"><i class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a>
                                 </div>
                             </div>
+
+                            <!-- Summary Section -->
                             <div class="col-lg-4 bg-body-tertiary">
                                 <div class="p-5">
                                     <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
                                     <hr class="my-4">
-
                                     <div class="d-flex justify-content-between mb-4">
-                                        <h5 class="text-uppercase">total items</h5>
-                                        <h5 id="item-count"></h5>
+                                        <h5 class="text-uppercase">Total Items</h5>
+                                        <h5>{{ productCtrl.totalItems }}</h5>
                                     </div>
-
-                                    <hr class="my-4">
-
                                     <div class="d-flex justify-content-between mb-5">
-                                        <h5 class="text-uppercase">Total price</h5>
-                                        <h5 id="cart-total"></h5>
+                                        <h5 class="text-uppercase">Total Price</h5>
+                                        <h5>${{ productCtrl.totalPrice }}</h5>
                                     </div>
-                                    <button type="button" class="btn btn-dark btn-block btn-lg" data-bs-toggle="modal" data-bs-target="#checkoutModal" onclick="showCheckoutModal()">Checkout</button>
+                                    <button type="button" class="btn btn-dark btn-block btn-lg" ng-click="productCtrl.showCheckoutJSON()">Checkout</button>
+
+                                    <!-- Cart JSON Output -->
+                                    <div class="mt-4" ng-show="productCtrl.showCartJSON">
+                                        <h5 class="fw-bold text-center">Cart Details JSON:</h5>
+                                        <pre>{{ productCtrl.cart | json }}</pre>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -100,36 +119,139 @@ Members:
     </div>
 </section>
 
-<!-- Modal -->
-<div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="checkoutModalLabel">Checkout</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<!-- Shipping Management Section -->
+<section id="shipping-section" class="container my-5" ng-show="productCtrl.isShippingFormVisible">
+    <h3 class="fw-bold text-center mb-4">Shipping Details</h3>
+    <form ng-submit="productCtrl.submitShipping()" novalidate>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                <label for="address" class="form-label">Address</label>
+                <input type="text" id="address" class="form-control" ng-model="productCtrl.shippingDetails.address" required>
             </div>
-            <div class="modal-body" style="background-color: #f8f9fa;">
-                <pre id="jsonDisplay" style="white-space: pre-wrap; word-wrap: break-word;"></pre>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <div class="col-md-6 mb-3">
+                <label for="city" class="form-label">City</label>
+                <input type="text" id="city" class="form-control" ng-model="productCtrl.shippingDetails.city" required>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4 mb-3">
+                <label for="state" class="form-label">State</label>
+                <input type="text" id="state" class="form-control" ng-model="productCtrl.shippingDetails.state" required>
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="zip" class="form-label">ZIP Code</label>
+                <input type="text" id="zip" class="form-control" ng-model="productCtrl.shippingDetails.zip" required>
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="country" class="form-label">Country</label>
+                <input type="text" id="country" class="form-control" ng-model="productCtrl.shippingDetails.country" required>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                <label for="carrier" class="form-label">Shipping Carrier</label>
+                <select id="carrier" class="form-control" ng-model="productCtrl.shippingDetails.carrier" required>
+                    <option value="FedEx">FedEx</option>
+                    <option value="UPS">UPS</option>
+                    <option value="DHL">DHL</option>
+                </select>
+            </div>
+            <div class="col-md-6 mb-3">
+                <label for="method" class="form-label">Shipping Method</label>
+                <select id="method" class="form-control" ng-model="productCtrl.shippingDetails.method" required>
+                    <option value="Overnight">Overnight</option>
+                    <option value="2nd Day">2nd Day</option>
+                    <option value="Ground">Ground</option>
+                </select>
+            </div>
+        </div>
+        <div class="text-center">
+            <button type="submit" class="btn btn-dark">Submit Shipping</button>
+        </div>
+    </form>
+    <!-- JSON Output for Shipping Details -->
+    <div class="mt-4" ng-show="productCtrl.showJSON">
+        <h5 class="fw-bold text-center">Shipping Details JSON:</h5>
+        <pre>{{ productCtrl.shippingDetails | json }}</pre>
     </div>
-</div>
+</section>
 
-<!-- Footer-->
+<!-- Footer -->
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; The Bookshelf 2024</p></div>
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; The Bookshelf 2024</p>
+    </div>
 </footer>
-<!-- JQuery -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
-<script src="js/productManagement.js"></script>
-<script src="js/shopperManagement.js" defer></script>
 
+<!-- AngularJS -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        let allProducts = []; // Stores all products fetched from products.json
+
+        // Fetch products from products.json on page load
+        $.getJSON('assets/products.json', function (products) {
+            allProducts = products;
+            console.log('Fetched products:', allProducts);
+        }).fail(function (error) {
+            console.error('Error fetching products:', error);
+        });
+
+        // Search products and display suggestions in dropdown
+        $('#productSearch').on('input', function () {
+            const query = $(this).val().toLowerCase();
+            const filteredProducts = allProducts.filter(product =>
+                product.name.toLowerCase().includes(query)
+            );
+
+            const searchDropdown = $('#searchDropdown');
+            searchDropdown.empty().hide(); // Clear previous results
+
+            // Set dropdown width to match search bar width
+            searchDropdown.width($(this).outerWidth());
+
+            if (query && filteredProducts.length > 0) {
+                filteredProducts.forEach(product => {
+                    searchDropdown.append(`
+                    <button class="dropdown-item" type="button" data-id="${product.id}">${product.name}</button>
+                `);
+                });
+                searchDropdown.show(); // Show dropdown when there are results
+            }
+        });
+
+        // Add selected product to the cart when clicked in dropdown
+        $(document).on('click', '#searchDropdown .dropdown-item', function () {
+            const productId = $(this).data('id');
+            const product = allProducts.find(p => p.id === productId);
+
+            if (product) {
+                const scope = angular.element(document.querySelector('[ng-controller="ProductController as productCtrl"]')).scope();
+                scope.$apply(function() {
+                    const existingItem = scope.productCtrl.cart.find(item => item.id === productId);
+
+                    if (existingItem) {
+                        existingItem.quantity += 1; // Increment quantity if already in cart
+                        scope.productCtrl.updateItemTotal(existingItem);
+                    } else {
+                        const newItem = {
+                            ...product,
+                            quantity: 1,
+                            totalPrice: product.price
+                        };
+                        scope.productCtrl.cart.push(newItem);
+                        console.log(`Added new product to cart: ${product.name}`);
+                    }
+                    scope.productCtrl.updateTotals();
+                });
+
+                $('#productSearch').val(''); // Clear the search input
+                $('#searchDropdown').empty().hide(); // Clear and hide dropdown after selection
+            }
+        });
+    });
+</script>
+<script src="js/shippingController.js" defer></script> <!-- Link to AngularJS controller -->
 </body>
 </html>
